<resources>
    <string name="app_name">JourneyCraft</string>
    <string name="we_will_send_you_an_otp_on_this_mobile_number">We will send you an OTP on this mobile number</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="_91">+91-</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_the_otp">Enter the OTP</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP</string>
    <string name="verify">Verify</string>
    <string name="let_s_kick_start_your_n_travelling_journey">Let\'s Kick Start Your\n Travelling Journey</string>
    <string name="explore_new_places_nand_get_new_experiences">Explore new places \nand get new experiences</string>
    <string name="api_key">AIzaSyAMVwVSIgde3V7yj2qX5OJ5JozD1-uH74w</string>
    <string name="menu_places">Places</string>
    <string name="menu_food">Food</string>
    <string name="menu_shopping">Shopping</string>

    <string name="dropdown_label">Places:</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>


    <string-array name="dropdown_items">
        <item>Panhala Fort</item>
        <item>Dajipur Wildlife Sanctuary</item>
        <item>Shri Chatrapati Shahu Museum (New Palace)</item>
        <item>Gaganbawada</item>
        <item>Ramtirth Waterfall</item>
        <item>Sagareshwar Deer Sanctuary</item>
        <item>Kopeshwar Temple</item>
        <item>Narsinhwadi Datta Mandir</item>
        <item>Mahalaxmi Temple, Kolhapur</item>
        <item>Binkhambi Ganesh Temple</item>
        <item>Gangagiri Maharaj Math Temple</item>
        <item>Rankala Lake</item>
        <item>Jyotiba Temple</item>
        <item>Temlabai Mandir</item>
        <item>Siddhagiri Museum</item>
        <item>Chinmaya Ganadhish</item>
        <item>DYP City Mall</item>
        <item>Sajja Kothi</item>
        <item>Bhavani Mandap</item>
        <item>Binkhambi Ganesh Mandir</item>
        <item>Radhanagari Dam</item>
        <item>Botanical Gardens in Kolhapur</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>